done exercise for calculator

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    js challenge
+    calculator js challenge
   </body>
   <script src="./challenge.js"></script>
 </html>
